--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -21,7 +21,9 @@ asgiref==3.7.2
 attrs==23.2.0
     # via aiohttp
 azure-common==1.1.28
-    # via azure-search-documents
+    # via
+    #   azure-keyvault-secrets
+    #   azure-search-documents
 azure-core==1.30.0
     # via
     #   azure-core-tracing-opentelemetry
@@ -46,6 +48,8 @@ azure-search-documents==11.6.0b1
     # via -r requirements.in
 azure-storage-blob==12.19.0
     # via -r requirements.in
+backoff==2.2.1
+    # via langfuse
 blinker==1.7.0
     # via
     #   flask
@@ -60,6 +64,8 @@ cffi==1.16.0
     # via cryptography
 charset-normalizer==3.3.2
     # via requests
+chevron==0.14.0
+    # via langfuse
 click==8.1.7
     # via
     #   flask
@@ -100,7 +106,9 @@ hpack==4.0.0
 httpcore==1.0.4
     # via httpx
 httpx==0.27.0
-    # via openai
+    # via
+    #   langfuse
+    #   openai
 hypercorn==0.16.0
     # via quart
 hyperframe==6.0.1
@@ -127,6 +135,8 @@ jinja2==3.1.3
     # via
     #   flask
     #   quart
+langfuse==2.19.1
+    # via -r requirements.in
 markupsafe==2.1.5
     # via
     #   jinja2
@@ -153,7 +163,9 @@ numpy==1.26.4
 oauthlib==3.2.2
     # via requests-oauthlib
 openai[datalib]==1.12.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   langfuse
 opentelemetry-api==1.23.0
     # via
     #   azure-core-tracing-opentelemetry
@@ -256,6 +268,7 @@ opentelemetry-util-http==0.44b0
     #   opentelemetry-instrumentation-wsgi
 packaging==23.2
     # via
+    #   langfuse
     #   msal-extensions
     #   opentelemetry-instrumentation-flask
 pandas==2.2.0
@@ -275,7 +288,9 @@ pyasn1==0.5.1
 pycparser==2.21
     # via cffi
 pydantic==2.6.1
-    # via openai
+    # via
+    #   langfuse
+    #   openai
 pydantic-core==2.16.2
     # via pydantic
 pyjwt[crypto]==2.8.0
@@ -348,6 +363,7 @@ werkzeug==3.0.1
 wrapt==1.16.0
     # via
     #   deprecated
+    #   langfuse
     #   opentelemetry-instrumentation
     #   opentelemetry-instrumentation-aiohttp-client
     #   opentelemetry-instrumentation-dbapi
