--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -18,11 +18,11 @@ anyio==4.3.0
     # via
     #   httpx
     #   openai
-asgiref==3.8.1
+asgiref==3.7.2
     # via opentelemetry-instrumentation-asgi
 attrs==23.2.0
     # via aiohttp
-azure-ai-documentintelligence==1.0.0b3
+azure-ai-documentintelligence==1.0.0b2
     # via -r requirements.in
 azure-common==1.1.28
     # via azure-search-documents
@@ -41,15 +41,15 @@ azure-core==1.30.1
     #   msrest
 azure-core-tracing-opentelemetry==1.0.0b11
     # via azure-monitor-opentelemetry
-azure-identity==1.16.0
+azure-identity==1.15.0
     # via
     #   -r requirements.in
     #   msgraph-sdk
 azure-keyvault-secrets==4.8.0
     # via -r requirements.in
-azure-monitor-opentelemetry==1.4.0
+azure-monitor-opentelemetry==1.3.0
     # via -r requirements.in
-azure-monitor-opentelemetry-exporter==1.0.0b24
+azure-monitor-opentelemetry-exporter==1.0.0b23
     # via azure-monitor-opentelemetry
 azure-search-documents==11.6.0b1
     # via -r requirements.in
@@ -92,11 +92,11 @@ deprecated==1.2.14
     # via opentelemetry-api
 distro==1.9.0
     # via openai
-ecdsa==0.19.0
+ecdsa==0.18.0
     # via python-jose
 fixedint==0.1.6
     # via azure-monitor-opentelemetry-exporter
-flask==3.0.3
+flask==3.0.2
     # via quart
 frozenlist==1.4.1
     # via
@@ -114,7 +114,7 @@ h2==4.1.0
     #   hypercorn
 hpack==4.0.0
     # via h2
-httpcore==1.0.5
+httpcore==1.0.4
     # via httpx
 httpx[http2]==0.27.0
     # via
@@ -131,10 +131,8 @@ idna==3.6
     #   httpx
     #   requests
     #   yarl
-importlib-metadata==7.0.0
-    # via
-    #   opentelemetry-api
-    #   opentelemetry-instrumentation-flask
+importlib-metadata==6.11.0
+    # via opentelemetry-api
 isodate==0.6.1
     # via
     #   azure-ai-documentintelligence
@@ -176,7 +174,7 @@ microsoft-kiota-serialization-json==1.1.0
     # via msgraph-sdk
 microsoft-kiota-serialization-text==1.0.0
     # via msgraph-sdk
-msal==1.28.0
+msal==1.27.0
     # via
     #   -r requirements.in
     #   azure-identity
@@ -200,9 +198,9 @@ numpy==1.26.4
     #   pandas-stubs
 oauthlib==3.2.2
     # via requests-oauthlib
-openai[datalib]==1.17.0
+openai[datalib]==1.13.3
     # via -r requirements.in
-opentelemetry-api==1.24.0
+opentelemetry-api==1.23.0
     # via
     #   azure-core-tracing-opentelemetry
     #   azure-monitor-opentelemetry-exporter
@@ -224,7 +222,7 @@ opentelemetry-api==1.24.0
     #   opentelemetry-instrumentation-urllib3
     #   opentelemetry-instrumentation-wsgi
     #   opentelemetry-sdk
-opentelemetry-instrumentation==0.45b0
+opentelemetry-instrumentation==0.44b0
     # via
     #   opentelemetry-instrumentation-aiohttp-client
     #   opentelemetry-instrumentation-asgi
@@ -239,48 +237,48 @@ opentelemetry-instrumentation==0.45b0
     #   opentelemetry-instrumentation-urllib
     #   opentelemetry-instrumentation-urllib3
     #   opentelemetry-instrumentation-wsgi
-opentelemetry-instrumentation-aiohttp-client==0.45b0
+opentelemetry-instrumentation-aiohttp-client==0.44b0
     # via -r requirements.in
-opentelemetry-instrumentation-asgi==0.45b0
+opentelemetry-instrumentation-asgi==0.44b0
     # via
     #   -r requirements.in
     #   opentelemetry-instrumentation-fastapi
-opentelemetry-instrumentation-dbapi==0.45b0
+opentelemetry-instrumentation-dbapi==0.44b0
     # via opentelemetry-instrumentation-psycopg2
-opentelemetry-instrumentation-django==0.45b0
+opentelemetry-instrumentation-django==0.44b0
     # via azure-monitor-opentelemetry
-opentelemetry-instrumentation-fastapi==0.45b0
+opentelemetry-instrumentation-fastapi==0.44b0
     # via azure-monitor-opentelemetry
-opentelemetry-instrumentation-flask==0.45b0
+opentelemetry-instrumentation-flask==0.44b0
     # via azure-monitor-opentelemetry
-opentelemetry-instrumentation-httpx==0.45b0
+opentelemetry-instrumentation-httpx==0.44b0
     # via -r requirements.in
-opentelemetry-instrumentation-openai==0.16.0
+opentelemetry-instrumentation-openai==0.13.1
     # via -r requirements.in
-opentelemetry-instrumentation-psycopg2==0.45b0
+opentelemetry-instrumentation-psycopg2==0.44b0
     # via azure-monitor-opentelemetry
-opentelemetry-instrumentation-requests==0.45b0
+opentelemetry-instrumentation-requests==0.44b0
     # via
     #   -r requirements.in
     #   azure-monitor-opentelemetry
-opentelemetry-instrumentation-urllib==0.45b0
+opentelemetry-instrumentation-urllib==0.44b0
     # via azure-monitor-opentelemetry
-opentelemetry-instrumentation-urllib3==0.45b0
+opentelemetry-instrumentation-urllib3==0.44b0
     # via azure-monitor-opentelemetry
-opentelemetry-instrumentation-wsgi==0.45b0
+opentelemetry-instrumentation-wsgi==0.44b0
     # via
     #   opentelemetry-instrumentation-django
     #   opentelemetry-instrumentation-flask
-opentelemetry-resource-detector-azure==0.1.4
+opentelemetry-resource-detector-azure==0.1.3
     # via azure-monitor-opentelemetry
-opentelemetry-sdk==1.24.0
+opentelemetry-sdk==1.23.0
     # via
     #   azure-monitor-opentelemetry-exporter
     #   microsoft-kiota-abstractions
     #   microsoft-kiota-authentication-azure
     #   microsoft-kiota-http
     #   opentelemetry-resource-detector-azure
-opentelemetry-semantic-conventions==0.45b0
+opentelemetry-semantic-conventions==0.44b0
     # via
     #   opentelemetry-instrumentation-aiohttp-client
     #   opentelemetry-instrumentation-asgi
@@ -289,15 +287,14 @@ opentelemetry-semantic-conventions==0.45b0
     #   opentelemetry-instrumentation-fastapi
     #   opentelemetry-instrumentation-flask
     #   opentelemetry-instrumentation-httpx
-    #   opentelemetry-instrumentation-openai
     #   opentelemetry-instrumentation-requests
     #   opentelemetry-instrumentation-urllib
     #   opentelemetry-instrumentation-urllib3
     #   opentelemetry-instrumentation-wsgi
     #   opentelemetry-sdk
-opentelemetry-semantic-conventions-ai==0.1.1
+opentelemetry-semantic-conventions-ai==0.0.20
     # via opentelemetry-instrumentation-openai
-opentelemetry-util-http==0.45b0
+opentelemetry-util-http==0.44b0
     # via
     #   opentelemetry-instrumentation-aiohttp-client
     #   opentelemetry-instrumentation-asgi
@@ -315,7 +312,7 @@ packaging==23.2
     #   opentelemetry-instrumentation-flask
 pandas==2.2.1
     # via openai
-pandas-stubs==2.2.1.240316
+pandas-stubs==2.2.0.240218
     # via openai
 pendulum==3.0.0
     # via microsoft-kiota-serialization-json
@@ -325,25 +322,23 @@ portalocker==2.8.2
     # via msal-extensions
 priority==2.0.0
     # via hypercorn
-psutil==5.9.8
-    # via azure-monitor-opentelemetry-exporter
-pyasn1==0.6.0
+pyasn1==0.5.1
     # via
     #   python-jose
     #   rsa
-pycparser==2.22
+pycparser==2.21
     # via cffi
-pydantic==2.6.4
+pydantic==2.6.3
     # via openai
 pydantic-core==2.16.3
     # via pydantic
 pyjwt[crypto]==2.8.0
     # via msal
-pymupdf==1.24.1
+pymupdf==1.23.26
     # via -r requirements.in
-pymupdfb==1.24.1
+pymupdfb==1.23.22
     # via pymupdf
-pypdf==4.2.0
+pypdf==4.1.0
     # via -r requirements.in
 python-dateutil==2.9.0.post0
     # via
@@ -355,7 +350,7 @@ python-jose[cryptography]==3.3.0
     # via -r requirements.in
 pytz==2024.1
     # via pandas
-quart==0.19.5
+quart==0.19.4
     # via
     #   -r requirements.in
     #   quart-cors
@@ -370,7 +365,7 @@ requests==2.31.0
     #   msrest
     #   requests-oauthlib
     #   tiktoken
-requests-oauthlib==2.0.0
+requests-oauthlib==1.3.1
     # via msrest
 rsa==4.9
     # via python-jose
@@ -401,7 +396,7 @@ types-beautifulsoup4==4.12.0.20240229
     # via -r requirements.in
 types-html5lib==1.1.11.20240228
     # via types-beautifulsoup4
-types-pillow==10.2.0.20240406
+types-pillow==10.2.0.20240213
     # via -r requirements.in
 types-pyasn1==0.6.0.20240402
     # via types-python-jose
@@ -409,7 +404,7 @@ types-python-jose==3.3.4.20240106
     # via -r requirements.in
 types-pytz==2024.1.0.20240203
     # via pandas-stubs
-typing-extensions==4.11.0
+typing-extensions==4.10.0
     # via
     #   azure-ai-documentintelligence
     #   azure-core
@@ -426,9 +421,9 @@ tzdata==2024.1
     #   pendulum
 urllib3==2.2.1
     # via requests
-uvicorn==0.29.0
+uvicorn==0.27.1
     # via -r requirements.in
-werkzeug==3.0.2
+werkzeug==3.0.1
     # via
     #   flask
     #   quart
@@ -443,7 +438,7 @@ wsproto==1.2.0
     # via hypercorn
 yarl==1.9.4
     # via aiohttp
-zipp==3.18.1
+zipp==3.17.0
     # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
