--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "ndjson-readablestream": "^1.0.7",
+    "@microsoft/ai-chat-protocol": "1.0.0-alpha.20240416.2",
     "react-syntax-highlighter": "^15.5.0",
     "scheduler": "^0.20.2"
   },
