add missing requirement

--- a/app/backend/pyproject.toml
+++ b/app/backend/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "azure-search-documents",
     "azure-ai-documentintelligence==1.0.0b4",
     "azure-storage-blob",
+    "azure-storage-file-datalake",
     "pymupdf",
     "pillow",
     "pypdf",
