--- a/evals/results/baseline-gpt4o-top3/config.json
+++ b/evals/results/baseline-gpt4o-top3/config.json
@@ -1,6 +1,6 @@
 {
     "testdata_path": "ground_truth.jsonl",
-    "results_dir": "results/agentic-descending-top3",
+    "results_dir": "results/experiment<TIMESTAMP>",
     "requested_metrics": ["gpt_groundedness", "gpt_relevance", "answer_length", "latency", "citations_matched", "any_citation"],
     "target_url": "https://capps-backend-32usxgruzbmli.yellowplant-b209c4cc.eastus2.azurecontainerapps.io/chat",
     "target_parameters": {
@@ -22,8 +22,7 @@
             "use_gpt4v": false,
             "gpt4v_input": "textAndImages",
             "language": "en",
-            "use_agentic_retrieval": true,
-            "results_merge_strategy": "descending",
+            "use_agentic_retrieval": false,
             "seed": 1
         }
     },
